--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kahil Logistic</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -27,9 +29,38 @@
         </nav>
         <div class="header">
             <div class="header-title">Kahil Logistic Company</div>
-            <div class="header-desc">Instant Solution to All Your Logistics Needs. The most reasonable price. Save Time and Compare. Call Me Now!</div>
+            <div class="header-desc">Instant Solution to All Your Logistics Needs. The most reasonable price. Save Time
+                and Compare. Call Me Now!</div>
             <a href="tel:+905307628300" class="mx-phone-button">0 (530) 762 8300</a>
         </div>
     </header>
+    <section class="services">
+        <div class="section-title">Services We Offer</div>
+        <div class="section-desc">This is the point where the logistics providers come to the rescue.</div>
+        <div class="cards">
+            <div class="card">
+                <div class="card-title">Warehousing services</div>
+                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
+                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
+                    many companies work hand in hand with third-party logistics service providers. They tend to receive
+                    ship and store out products on behalf of their clients.</div>
+            </div>
+            <div class="card">
+                <div class="card-title">Warehousing services</div>
+                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
+                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
+                    many companies work hand in hand with third-party logistics service providers. They tend to receive
+                    ship and store out products on behalf of their clients.</div>
+            </div>
+            <div class="card">
+                <div class="card-title">Warehousing services</div>
+                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
+                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
+                    many companies work hand in hand with third-party logistics service providers. They tend to receive
+                    ship and store out products on behalf of their clients.</div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
