--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="services">
         <div class="section-title">Services We Offer</div>
         <div class="section-desc">This is the point where the logistics providers come to the rescue.</div>
-        <div class="cards">
+        <div class="row">
             <div class="card">
                 <div class="card-title">Warehousing services</div>
                 <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
@@ -58,6 +58,24 @@
                     through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
                     many companies work hand in hand with third-party logistics service providers. They tend to receive
                     ship and store out products on behalf of their clients.</div>
+            </div>
+        </div>
+    </section>
+    <section class="company">
+        <div class="section-title">Our Company Branches</div>
+        <div class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with over 1,530 sites in over 30 countries.</div>
+        <div class="row">
+            <div class="image-card">
+                <img src="https://www.kahillogistic.com/images/company1.jpg" alt="Company 1">
+                <div class="image-layer">Istanbul</div>
+            </div>
+            <div class="image-card">
+                <img src="https://www.kahillogistic.com/images/company2.jpg" alt="Company 1">
+                <div class="image-layer">Ankara</div>
+            </div>
+            <div class="image-card">
+                <img src="https://www.kahillogistic.com/images/company3.jpg" alt="Company 1">
+                <div class="image-layer">Mersin</div>
             </div>
         </div>
     </section>
