--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
             </div>
         </div>
     </section>
+    <section class="facilities">
+        <div class="section-title">Our Facilities</div>
+        <div class="section-desc">The objective of the typology is to distinguish logistics facilities according to their activities.</div>
+        <div class="row">
+            <div class="image-round">
+                <img src="https://www.kahillogistic.com/images/cover5.jpg" alt="Cover 5">
+            </div>
+            <div class="image-round">
+                <img src="https://www.kahillogistic.com/images/cover6.jpg" alt="Cover 5">
+            </div>
+            <div class="image-round">
+                <img src="https://www.kahillogistic.com/images/cover7.jpg" alt="Cover 5">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
