--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
             </div>
         </div>
     </section>
+    <section class="testimonials">
+        <div class="section-title">What Our Clinets Says</div>
+        <div class="section-desc">We belive what our clients say...</div>
+        <div class="row">
+            <div class="comment">
+                <div class="user-image">
+                    <img src="https://www.kahillogistic.com/images/user1.jpg" alt="User 1">
+                </div>
+                <div class="user-name">Hadeel Alqadii</div>
+                <div class="stars">4.5*</div>
+                <div class="comment-text">Start day work first off all security guard check attendance and information take to head office then check warehouse cleaners and workers report to head office after then one round check to warehouse</div>
+            </div>
+            <div class="comment">
+                <div class="user-image">
+                    <img src="https://www.kahillogistic.com/images/user1.jpg" alt="User 1">
+                </div>
+                <div class="user-name">Salem Alselwi</div>
+                <div class="stars">4*</div>
+                <div class="comment-text">Start day work first off all security guard check attendance and information take to head office then check warehouse cleaners and workers report to head office after then one round check to warehouse</div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
