--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     </section>
     <section class="company">
         <div class="section-title">Our Company Branches</div>
-        <div class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with over 1,530 sites in over 30 countries.</div>
+        <div class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with
+            over 1,530 sites in over 30 countries.</div>
         <div class="row">
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company1.jpg" alt="Company 1">
@@ -81,7 +82,8 @@
     </section>
     <section class="facilities">
         <div class="section-title">Our Facilities</div>
-        <div class="section-desc">The objective of the typology is to distinguish logistics facilities according to their activities.</div>
+        <div class="section-desc">The objective of the typology is to distinguish logistics facilities according to
+            their activities.</div>
         <div class="row">
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover5.jpg" alt="Cover 5">
@@ -104,18 +106,40 @@
                 </div>
                 <div class="user-name">Hadeel Alqadii</div>
                 <div class="stars">4.5*</div>
-                <div class="comment-text">Start day work first off all security guard check attendance and information take to head office then check warehouse cleaners and workers report to head office after then one round check to warehouse</div>
+                <div class="comment-text">Start day work first off all security guard check attendance and information
+                    take to head office then check warehouse cleaners and workers report to head office after then one
+                    round check to warehouse</div>
             </div>
             <div class="comment">
                 <div class="user-image">
-                    <img src="https://www.kahillogistic.com/images/user1.jpg" alt="User 1">
+                    <img src="https://www.kahillogistic.com/images/user2.jpg" alt="User 2">
                 </div>
                 <div class="user-name">Salem Alselwi</div>
                 <div class="stars">4*</div>
-                <div class="comment-text">Start day work first off all security guard check attendance and information take to head office then check warehouse cleaners and workers report to head office after then one round check to warehouse</div>
+                <div class="comment-text">Start day work first off all security guard check attendance and information
+                    take to head office then check warehouse cleaners and workers report to head office after then one
+                    round check to warehouse</div>
             </div>
         </div>
     </section>
+    <section class="cta">
+        <div class="cta-text">Be One Of Our Clients Anywhere From The World</div>
+        <a href="tel:+905307628300">Contact Us</a>
+    </section>
+    <footer>
+        <div class="footer-title">About Us</div>
+        <div class="footer-desc">Kahil Logistics has completed the acquisition of the majority of Ingram Micro’s
+            Commerce & Lifecycle
+            Services (CLS) business. With our combined business, we are in our strongest position ever
+            and we continue down a successful path to become a Top 5 global logistics player.</div>
+        <a href="https://www.linkedin.com/in/marwah-kahil">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path
+                    d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z">
+                </path>
+            </svg>
+        </a>
+    </footer>
 </body>
 
 </html>
