--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kahil Logistic</title>
+    <link rel="stylesheet" href="/css/style.min.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <div>
-                <div class="logo"></div>
+            <div class="flex">
+                <a title="Kahil Logistic" href="#!" class="logo">
+                    <img src="/images/logo.webp" alt="Kahil Logistic">
+                </a>
                 <div class="languages">
                     <a title="English" href="#!">English</a>
                     <a title="العربية" href="#!">العربية</a>
