The design of the header section has been updated.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,17 @@
             </div>
         </nav>
         <div class="header">
-            <div class="header-title">Kahil Logistic Company</div>
-            <div class="header-desc">Instant Solution to All Your Logistics Needs. The most reasonable price. Save Time
-                and Compare. Call Me Now!</div>
-            <a href="tel:+905307628300" class="mx-phone-button">0 (530) 762 8300</a>
+            <h1 class="header-title">Kahil Logistic Company</h1>
+            <p class="header-desc">Instant Solution to All Your Logistics Needs. The most reasonable price. Save Time
+                and Compare. Call Me Now!</p>
+            <a title="Call Me Now!" href="tel:+905307628300" class="mx-phone-button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                        d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602 154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z">
+                    </path>
+                </svg>
+                <span>0 (850) 762 8300</span>
+            </a>
         </div>
     </header>
     <section class="services">
