CSS fixes have been made.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
     </header>
     <section class="services">
-        <div class="section-title">Services We Offer</div>
-        <div class="section-desc">This is the point where the logistics providers come to the rescue.</div>
+        <h2 class="section-title">Services We Offer</h2>
+        <p class="section-desc">This is the point where the logistics providers come to the rescue.</p>
         <div class="row">
             <div class="card">
                 <div class="card-title">Warehousing services</div>
@@ -72,28 +72,28 @@
         </div>
     </section>
     <section class="company">
-        <div class="section-title">Our Company Branches</div>
-        <div class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with
-            over 1,530 sites in over 30 countries.</div>
+        <h2 class="section-title">Our Company Branches</h2>
+        <p class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with
+            over 1,530 sites in over 30 countries.</p>
         <div class="row">
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company1.jpg" alt="Company 1">
-                <div class="image-layer">Istanbul</div>
+                <div class="image-layer"><span>Istanbul</span></div>
             </div>
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company2.jpg" alt="Company 1">
-                <div class="image-layer">Ankara</div>
+                <div class="image-layer"><span>Ankara</span></div>
             </div>
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company3.jpg" alt="Company 1">
-                <div class="image-layer">Mersin</div>
+                <div class="image-layer"><span>Mersin</span></div>
             </div>
         </div>
     </section>
     <section class="facilities">
-        <div class="section-title">Our Facilities</div>
-        <div class="section-desc">The objective of the typology is to distinguish logistics facilities according to
-            their activities.</div>
+        <h2 class="section-title">Our Facilities</h2>
+        <p class="section-desc">The objective of the typology is to distinguish logistics facilities according to
+            their activities.</p>
         <div class="row">
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover5.jpg" alt="Cover 5">
@@ -107,8 +107,8 @@
         </div>
     </section>
     <section class="testimonials">
-        <div class="section-title">What Our Clinets Says</div>
-        <div class="section-desc">We belive what our clients say...</div>
+        <h2 class="section-title">What Our Clinets Says</h2>
+        <p class="section-desc">We belive what our clients say...</p>
         <div class="row">
             <div class="comment">
                 <div class="user-image">
@@ -133,7 +133,7 @@
         </div>
     </section>
     <section class="cta">
-        <div class="cta-text">Be One Of Our Clients Anywhere From The World</div>
+        <h3 class="cta-text">Be One Of Our Clients Anywhere From The World</h3>
         <a href="tel:+905307628300">Contact Us</a>
     </section>
     <footer>
