--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
 </head>
 
 <body>
+    <nav>
+        <div class="flex">
+            <a title="Kahil Logistic" href="#!" class="logo">
+                <img src="/images/logo.webp" alt="Kahil Logistic">
+            </a>
+            <div class="languages">
+                <a title="English" href="#!">English</a>
+                <a title="العربية" href="#!">العربية</a>
+                <a title="Türkçe" href="#!">Türkçe</a>
+            </div>
+        </div>
+        <div>
+            <div class="links">
+                <a title="Home" href="#!">Home</a>
+                <a title="About" href="#!">About</a>
+                <a title="Services" href="#!">Services</a>
+            </div>
+        </div>
+    </nav>
     <header>
-        <nav>
-            <div class="flex">
-                <a title="Kahil Logistic" href="#!" class="logo">
-                    <img src="/images/logo.webp" alt="Kahil Logistic">
-                </a>
-                <div class="languages">
-                    <a title="English" href="#!">English</a>
-                    <a title="العربية" href="#!">العربية</a>
-                    <a title="Türkçe" href="#!">Türkçe</a>
-                </div>
-            </div>
-            <div>
-                <div class="links">
-                    <a title="Home" href="#!">Home</a>
-                    <a title="About" href="#!">About</a>
-                    <a title="Services" href="#!">Services</a>
-                </div>
-            </div>
-        </nav>
         <div class="header">
             <h1 class="header-title">Kahil Logistic Company</h1>
             <p class="header-desc">Instant Solution to All Your Logistics Needs. The most reasonable price. Save Time
                 and Compare. Call Me Now!</p>
             <a title="Call Me Now!" href="tel:+905307628300" class="mx-phone-button">
-                <img src="/images/marwah-e1650023155749.webp" alt="Marwah Kahil"/>
+                <img src="/images/marwah-e1650023155749.webp" alt="Marwah Kahil" />
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path
                         d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602 154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z">
@@ -45,6 +45,25 @@
             </a>
         </div>
     </header>
+    <section class="company">
+        <h2 class="section-title">Our Company Branches</h2>
+        <p class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with
+            over 1,530 sites in over 30 countries.</p>
+        <div class="row">
+            <div class="image-card">
+                <img src="https://www.kahillogistic.com/images/company1.jpg" alt="Company 1">
+                <div class="image-layer"><span>Istanbul</span></div>
+            </div>
+            <div class="image-card">
+                <img src="https://www.kahillogistic.com/images/company2.jpg" alt="Company 1">
+                <div class="image-layer"><span>Ankara</span></div>
+            </div>
+            <div class="image-card">
+                <img src="https://www.kahillogistic.com/images/company3.jpg" alt="Company 1">
+                <div class="image-layer"><span>Mersin</span></div>
+            </div>
+        </div>
+    </section>
     <section class="services">
         <h2 class="section-title">Services We Offer</h2>
         <p class="section-desc">This is the point where the logistics providers come to the rescue.</p>
@@ -72,25 +91,6 @@
             </div>
         </div>
     </section>
-    <section class="company">
-        <h2 class="section-title">Our Company Branches</h2>
-        <p class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with
-            over 1,530 sites in over 30 countries.</p>
-        <div class="row">
-            <div class="image-card">
-                <img src="https://www.kahillogistic.com/images/company1.jpg" alt="Company 1">
-                <div class="image-layer"><span>Istanbul</span></div>
-            </div>
-            <div class="image-card">
-                <img src="https://www.kahillogistic.com/images/company2.jpg" alt="Company 1">
-                <div class="image-layer"><span>Ankara</span></div>
-            </div>
-            <div class="image-card">
-                <img src="https://www.kahillogistic.com/images/company3.jpg" alt="Company 1">
-                <div class="image-layer"><span>Mersin</span></div>
-            </div>
-        </div>
-    </section>
     <section class="facilities">
         <h2 class="section-title">Our Facilities</h2>
         <p class="section-desc">The objective of the typology is to distinguish logistics facilities according to
@@ -98,12 +98,21 @@
         <div class="row">
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover5.jpg" alt="Cover 5">
+                <div class="image-header">Post-purchase Services</div>
+                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
+                    to their activities.</div>
             </div>
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover6.jpg" alt="Cover 5">
+                <div class="image-header">Largest port services</div>
+                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
+                    to their activities.</div>
             </div>
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover7.jpg" alt="Cover 5">
+                <div class="image-header">Fast Shipping Anywhere</div>
+                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
+                    to their activities.</div>
             </div>
         </div>
     </section>
@@ -115,21 +124,44 @@
                 <div class="user-image">
                     <img src="https://www.kahillogistic.com/images/user1.jpg" alt="User 1">
                 </div>
-                <div class="user-name">Hadeel Alqadii</div>
-                <div class="stars">4.5*</div>
-                <div class="comment-text">Start day work first off all security guard check attendance and information
-                    take to head office then check warehouse cleaners and workers report to head office after then one
-                    round check to warehouse</div>
+                <div>
+                    <div class="user-name">
+                        <span>Hadel Alqadii</span>
+                        <div class="stars">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7zM288 376.4L288.1 376.3L399.7 435.9L378.4 309.6L469.2 219.8L343.8 201.4L288.1 86.85L288 87.14V376.4z"/></svg>
+                        </div>
+                    </div>
+                    <div class="comment-text">Start day work first off all security guard check attendance and
+                        information
+                        take to head office then check warehouse cleaners and workers report to head office after then
+                        one
+                        round check to warehouse</div>
+                </div>
             </div>
             <div class="comment">
                 <div class="user-image">
                     <img src="https://www.kahillogistic.com/images/user2.jpg" alt="User 2">
                 </div>
-                <div class="user-name">Salem Alselwi</div>
-                <div class="stars">4*</div>
-                <div class="comment-text">Start day work first off all security guard check attendance and information
-                    take to head office then check warehouse cleaners and workers report to head office after then one
-                    round check to warehouse</div>
+                <div>
+                    <div class="user-name">
+                        <span>Salem Alselwi</span>
+                        <div class="stars">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"/></svg>
+                        </div>
+                    </div>
+                    <div class="comment-text">Start day work first off all security guard check attendance and
+                        information
+                        take to head office then check warehouse cleaners and workers report to head office after then
+                        one
+                        round check to warehouse</div>
+                </div>
             </div>
         </div>
     </section>
@@ -143,7 +175,7 @@
             Commerce & Lifecycle
             Services (CLS) business. With our combined business, we are in our strongest position ever
             and we continue down a successful path to become a Top 5 global logistics player.</div>
-        <a href="https://www.linkedin.com/in/marwah-kahil">
+        <a class="linkedin" href="https://www.linkedin.com/in/marwah-kahil">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path
                     d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z">
@@ -151,6 +183,7 @@
             </svg>
         </a>
     </footer>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
